--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container"><h1>All the cocktails of our bar:</h1>
 
-  <div class="cards">
-    <% @cocktails.each do |cocktail| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+<div class="cards">
+  <% @cocktails.each do |cocktail| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill if cocktail.photo.present? %>')">
       <%= link_to cocktail.name, cocktail_path(cocktail) %>
-      </div>
-    <% end %>
-  </div>
-
-
-
-<%= link_to "Add your own!", new_cocktail_path, class: "btn btn-warning" %>
+    </div>
+  <% end %>
 </div>
+<%= link_to "Add your own!", new_cocktail_path, class: "btn btn-gradient"  %>
+</div>
+
+
+
