--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,10 @@
 <h1>Add a new cocktail</h1>
 
 <div class="container">
-<%= simple_form_for([@cocktail]) do |f| %>
-<%= f.input :name %>
-<%#= f.collection_radio_buttons :rating, [[0, '0'], [1, '1'] ,[2, '2'],[3, '3'],[4, '4'],[5, '5']], :first, :last %>
-<%= f.submit %>
-<% end %>
+  <%= simple_form_for([@cocktail]) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
+    <%= f.submit %>
+  <% end %>
 </div>
